# TestSessionInterface

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md
generateinterfaceclient/: CMakeLists.txt  com.qt.example.dbus.xml  main.cpp  mainwindow.cpp  mainwindow.h  test_interface.cpp  test_interface.h
generateinterfaceservice/: CMakeLists.txt  com.qt.example.dbus - 副本(1).xml  main.cpp  test.cpp  test.h  test_adaptor.cpp  test_adaptor.h
